kubernetes/implantacao-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: gerenciador-tarefas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: gustabrito/gerenciador-tarefas-api:latest
          ports:
            - containerPort: 8080
