kubernetes/implantacao-banco-dados.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banco-dados
  namespace: gerenciador-tarefas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banco-dados
  template:
    metadata:
      labels:
        app: banco-dados
    spec:
      containers:
        - name: banco-dados
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: volume-banco-dados
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: volume-banco-dados
          persistentVolumeClaim:
            claimName: pvc-banco-dados
