kubernetes/implantacao-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: gerenciador-tarefas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gustabrito/gerenciador-tarefas-frontend:latest
          ports:
            - containerPort: 80
