kubernetes/servico-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: gerenciador-tarefas
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
