kubernetes/servico-banco-dados.yaml
apiVersion: v1
kind: Service
metadata:
  name: banco-dados
  namespace: gerenciador-tarefas
spec:
  selector:
    app: banco-dados
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
